@@ -114,6 +114,7 @@ Many advanced features in ATS such as dependent types and linear types are
 presented in this graduate-level course:
 #para("")
 #menu('\
+#litxt(#ulink("http://www.cs.bu.edu/~hwxi/academic/courses/Fall12/CS520.html", "Fall\'12"))
 #litxt(#ulink("http://www.cs.bu.edu/~hwxi/academic/courses/Fall11/CS520.html", "Fall\'11"))
 #litxt(#ulink("http://www.cs.bu.edu/~hwxi/academic/courses/Fall10/CS520.html", "Fall\'10"))
 #litxt(#ulink("http://www.cs.bu.edu/~hwxi/academic/courses/Fall09/CS520.html", "Fall\'09"))
